# defi-autopilot

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RISK_POLICY.md  policy.yaml  pyproject.toml
.github/workflows/: test.yml
defi_autopilot/: __init__.py  audit.py  cli.py  doctor.py  policy.py  state_machine.py
defi_autopilot/core/: chains.py  rpc.py  signer.py  tokens.py  tx.py
defi_autopilot/protocols/aave/: __init__.py  client.py
defi_autopilot/protocols/cctp/: __init__.py  client.py  client_v2.py  doctor.py
defi_autopilot/protocols/compound/: __init__.py  client.py
defi_autopilot/protocols/curve/: __init__.py  client.py
defi_autopilot/protocols/debridge/: __init__.py  client.py
defi_autopilot/protocols/lido/: __init__.py  client.py
defi_autopilot/protocols/moonwell/: __init__.py  client.py
defi_autopilot/protocols/morpho/: __init__.py  client.py
defi_autopilot/protocols/oneinch/: __init__.py  client.py
defi_autopilot/protocols/uniswap/: __init__.py  client.py
examples/: check_positions.py  swap_quote.py
tests/: test_doctor.py
tests/core/: test_audit.py  test_chains.py  test_policy.py  test_rpc.py  test_token_policy.py  test_tokens.py  test_tx.py  test_tx_policy.py
tests/protocols/: __init__.py  test_aave.py  test_cctp.py  test_cctp_doctor.py  test_cctp_v2.py  test_compound.py  test_curve.py  test_debridge.py  test_lido.py  test_moonwell.py  test_morpho.py  test_oneinch.py  test_uniswap.py
