[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "defi-autopilot"
version = "0.5.0"
description = "多链多协议 DeFi 自动化工具集 — 供应链借贷、Swap、质押于一体"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "counterfactual5" },
]

dependencies = [
    "web3>=6.15",
    "eth-account>=0.11",
    "eth-utils>=2.3",
    "python-dotenv>=1.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
    "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
]

[project.scripts]
defi = "defi_autopilot.cli:cli"

[project.urls]
Repository = "https://github.com/counterfactual5/defi-autopilot"
Issues = "https://github.com/counterfactual5/defi-autopilot/issues"

[tool.setuptools.packages.find]
include = ["defi_autopilot*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[dependency-groups]
dev = [
    "ruff>=0.15.15",
]
